public/stylesheets/site.css
/* Font/Text setting overwrites/Additions */
body {
  min-height: 75rem;
  padding-top: 98px;
}
body,
p {
  font-family: "Poppins", sans-serif !important;
  color: #003146;
}
section::before {
  display: block;
  content: " ";
  margin-top: -98px;
  height: 98px;
  visibility: hidden;
  pointer-events: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
}

.fw-light {
  font-weight: 300 !important;
}

.fw-normal {
  font-weight: 400 !important;
}

.fw-bold {
  font-weight: 500 !important;
}

.fw-bolder {
  font-weight: 600 !important;
}

.fw-boldest {
  font-weight: 700 !important;
}
.text-underline-below {
  text-underline-position: under;
}
.fs-6 {
  font-size: 1.15rem !important;
}
@media (min-width: 992px) {
  .fs-lg-5 {
    font-size: 1.25rem !important;
  }
}
/* Colors */
.text-primary {
  color: #003146 !important;
}

.text-primary-light {
  color: #6f8b97;
}

.text-secondary {
  color: #669b41 !important;
}

.text-secondary-lighter {
  color: #b5c435;
}
.text-accent {
  color: #f2a053;
}

.text-secondary-accent {
  color: #b5c435;
}

/* Spacing (Margins/Padding/Line-Height) */

.lh-md {
  line-height: 1.6 !important;
}
.p-6 {
  padding: 5rem !important;
}
.pt-6 {
  padding-top: 5rem !important;
}
.px-6 {
  padding-right: 4rem !important;
  padding-left: 4rem !important;
}

.px-7 {
  padding-right: 5rem !important;
  padding-left: 5rem !important;
}
.w-33 {
  width: 33% !important;
}
.w-55 {
  width: 55% !important;
}
.m-10 {
  margin: 6rem !important;
}
.mt-10 {
  margin-top: 6rem !important;
}
.mt-15 {
  margin-top: 7rem !important;
}
.my-10 {
  margin-top: 6rem !important;
  margin-bottom: 6rem !important;
}
/* Links */

a,
.link-primary,
.nav-link {
  color: #003146;
  transition: all 0.3s ease-in;
  text-decoration: none;
}
a:hover,
a:active,
a.active,
.link-primary:hover,
.link-primary:active,
.link-primary.active,
.nav-link:hover,
.nav-link:active,
.nav-link.active {
  color: #6f8b97;
}

.subnav > a {
  color: #ffffff;
  text-decoration: none;
}
.subnav > a:hover,
.subnav > a:active,
.subnav > a.active {
  color: #afe48a;
  text-decoration: none;
}
.link-primary-light {
  color: #6f8b97;
  transition: all 0.3s ease-in;
}
.link-primary-light:hover {
  color: #ffffff;
}
.link-primary-light:active {
  color: #ffffff;
}

.link-secondary {
  color: #669b41;
}
.link-secondary:hover {
  color: #b5c435;
}
.link-secondary:active {
  color: #b5c435;
}

/* Borders */
.border-primary {
  border-color: #003146 !important;
}

.border-secondary {
  border-color: #669b41 !important;
}
.border-accent {
  border-color: #b5c435 !important;
}
.rounded-4 {
  /* Used on buttons */
  border-radius: 0.4rem !important;
}

/* Background */
.bg-primary {
  background-color: #003146 !important;
}

.bg-primary-light {
  background-color: #c1cbd0;
  /* background-color: #dae0e3; */
}

.bg-secondary {
  background-color: #669b41 !important;
}
.bg-secondary-light {
  background-color: #f3fcec;
}

/* Buttons */
.btn {
  padding: 0.54rem 1.95rem !important;
  border-width: 2px !important;
  border-radius: 0.6rem !important;
  font-weight: 500 !important;
}
.btn-outline-primary {
  color: #103145;
  background-color: FFFFFF;
  border-color: #103145;
  transition: all 0.2s ease-in;
}
.btn-outline-primary:hover {
  color: #ffffff;
  background-color: #103145;
  border-color: #103145;
}

.btn-primary {
  color: #ffffff !important;
  background-color: #003146;
  border-color: #003146;
}

.btn-primary:hover {
  color: #ffffff;
  background-color: #012636;
  border-color: #012636;
}

.btn-accent {
  color: #ffffff;
  background-color: #ff9c3f;
  border-color: #ff9c3f;
}

.btn-accent:hover {
  color: #ffffff;
  background-color: #ffb26a;
  border-color: #ffb26a;
}

/* MISC NON BOOTSTRAP OVERWRITES */

/* Hero */
.homepage-hero {
  background-image: linear-gradient(
      to right,
      transparent,
      37%,
      #669b41 45%,
      #669b41 100%
    ),
    url("../images/homepage-hero-v2.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 525px;
  position: relative;
}
@media (max-width: 767.98px) {
  .homepage-hero {
    background-image: linear-gradient(
        to bottom,
        rgba(102, 155, 65, 0.9),
        rgba(102, 155, 65, 0.9)
      ),
      url("../images/homepage-hero-v2.png");
  }
}

.aboutus-hero {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 49, 70, 0.8),
      rgba(0, 49, 70, 0.8)
    ),
    url("../images/about-us-hero.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 465px;
  position: relative;
}

.ateam-hero {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 49, 70, 0.8),
      rgba(0, 49, 70, 0.8)
    ),
    url("../images/ateam-hero.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 465px;
  position: relative;
}

/* Mid-Page Heros */
.victory-hero {
  background-image: linear-gradient(to right, transparent, 42%, #003146 58%),
    url("../images/victory-hero.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 665px;
  position: relative;
  line-height: 2;
}
@media (max-width: 767.98px) {
  .victory-hero {
    background-image: linear-gradient(
        to bottom,
        rgba(0, 49, 70, 0.9),
        rgba(0, 49, 70, 0.9)
      ),
      url("../images/victory-hero.png");
  }
}
@media (max-width: 991.98px) {
  .victory-hero {
    line-height: 1.25;
  }
}

.engines-hero {
  background-image: linear-gradient(to right, transparent, 42%, #ffffff 58%),
    url("../images/engine-hero.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 665px;
  position: relative;
  line-height: 2;
}
@media (max-width: 767.98px) {
  .engines-hero {
    background-image: linear-gradient(
        to bottom,
        rgba(0, 49, 70, 0.9),
        rgba(0, 49, 70, 0.9)
      ),
      url("../images/engine-hero.png");
  }
}
/* Lists */
.believe-list > li {
  position: relative;
  margin-left: 35px;
}
.believe-list > li:before {
  position: absolute;
  left: -60px;
  padding-right: 15px;
  content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='35' height='35' fill='rgb(102, 155, 65)' class='text-secondary bi bi-arrow-right-circle' viewBox='0 0 16 16'> <path fill-rule='evenodd' d='M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z' /></svg>");
  height: auto;
  width: 35px;
}
/* Navagation Elements */

.subnav {
  height: 110px;
}

/* Responsive BreakPoint Additions */

/* XS Screen */
@media (max-width: 576px) {
  .believe-list > li {
    margin-left: 55px;
  }
  .believe-list > li:before {
    left: -45px;
  }
}
/* SM Screen */
@media (min-width: 576px) {
  .m-sm-10 {
    margin: 6rem !important;
  }
  .my-sm-10 {
    margin-top: 6rem !important;
    margin-bottom: 6rem !important;
  }
  .py-md-10 {
    padding-top: 6rem !important;
    padding-bottom: 6rem !important;
  }
  .lh-sm-1 {
    line-height: 1 !important;
  }
  .lh-sm-sm {
    line-height: 1.25 !important;
  }
  .lh-sm-base {
    line-height: 1.5 !important;
  }
  .lh-sm-lg {
    line-height: 2 !important;
  }
}
/* MD Screen */
@media (min-width: 768px) {
  .w-md-50 {
    width: 50% !important;
  }
  .w-md-65 {
    width: 65% !important;
  }
  .m-md-10 {
    margin: 6rem !important;
  }
  .my-md-10 {
    margin-top: 6rem !important;
    margin-bottom: 6rem !important;
  }
  .py-md-10 {
    padding-top: 6rem !important;
    padding-bottom: 6rem !important;
  }
  .lh-md-1 {
    line-height: 1 !important;
  }

  .lh-md-sm {
    line-height: 1.25 !important;
  }

  .lh-md-base {
    line-height: 1.5 !important;
  }

  .lh-md-lg {
    line-height: 2 !important;
  }
}
/* LG Screen */
@media (min-width: 992px) {
  .w-lg-50 {
    width: 50% !important;
  }
  .w-lg-55 {
    width: 55% !important;
  }
  .m-lg-10 {
    margin: 6rem !important;
  }
  .my-lg-10 {
    margin-top: 6rem !important;
    margin-bottom: 6rem !important;
  }
  .py-lg-10 {
    padding-top: 6rem !important;
    padding-bottom: 6rem !important;
  }
  .lh-lg-1 {
    line-height: 1 !important;
  }

  .lh-lg-sm {
    line-height: 1.25 !important;
  }

  .lh-lg-base {
    line-height: 1.5 !important;
  }

  .lh-lg-lg {
    line-height: 2 !important;
  }
}

